# bivvy

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  REVIEW-CHECKLIST.md  ui-surface-refactor-plan.md
.bivvy/: config.yml
.bivvy/workflows/: release.yml
.claude/: bivvy-dev-workflow.md
.github/workflows/: build.yml  create-release.yml  docs-changed.yml  publish-packages.yml  release.yml  test.yml
docs/: LICENSE.md  SUMMARY.md  index.md
docs/commands/: add.md  cache.md  completions.md  config.md  feedback.md  history.md  index.md  init.md  last.md  lint.md  list.md  run.md  schema.md  snapshot.md  status.md  templates.md  update.md
docs/configuration/: completed-checks.md  environments.md  index.md  requirements.md  secrets.md  settings.md  state.md  steps.md  variables.md  workflows.md
docs/development/: releasing.md
docs/guides/: artifact-audits.md  auto-run.md  ci-integration.md  diagnostics.md  event-log.md  ide-integration.md  migrate-to-checks.md  shell-completions.md  shell-refresh.md
docs/installation/: curl.md  gem.md  homebrew.md  index.md  npm.md  pip.md
docs/reference/: config-reference.md  config-reference.yml  lint-rules.md  template-reference.yml
docs/templates/: builtin.md  index.md  remote-sources.md
scripts/: generate-schema.sh  release.sh  update-homebrew-sha.sh  update-versions.sh
src/: error.rs  lib.rs  main.rs  sys.rs
src/cache/: entry.rs  mod.rs  revalidation.rs  store.rs  validation.rs
src/checks/: change.rs  evaluator.rs  execution.rs  mod.rs  presence.rs
src/cli/: args.rs  clx-mock-output.md  mod.rs  session_wrapper.rs
src/config/: discovery.rs  env_file.rs  env_layer.rs  environment.rs  extends.rs  interpolation.rs  loader.rs  merger.rs  mod.rs  remote.rs  schema.rs  trust.rs  validator.rs  vars.rs
src/detection/: command_detection.rs  conflicts.rs  environment.rs  file_detection.rs  mod.rs  package_manager.rs  project.rs  runner.rs  types.rs
src/environment/: README.md  detection.rs  mod.rs  resolver.rs
src/feedback/: delivery.rs  entry.rs  mod.rs  store.rs
src/lint/: diagnostic.rs  fix.rs  mod.rs  registry.rs  rule.rs  schema.rs  span.rs
src/logging/: bus.rs  events.rs  mod.rs
src/registry/: builtin.rs  detector.rs  local.rs  manifest.rs  mod.rs  remote.rs  resolver.rs  source.rs  template.rs  template_name.rs
src/requirements/: README.md  checker.rs  installer.rs  mod.rs  probe.rs  registry.rs  status.rs
src/runner/: decision.rs  dependency.rs  engine.rs  execution.rs  mod.rs  orchestrate.rs  patterns.rs  plan.rs  recovery.rs  rerun_window.rs  satisfaction.rs  step_manager.rs  telemetry.rs  workflow.rs  workflow_tests.rs
src/secrets/: mask.rs  mod.rs  pattern.rs
src/session/: id.rs  metadata.rs  mod.rs  store.rs
src/shell/: command.rs  debug.rs  mod.rs  platform.rs  refresh.rs  resume.rs
src/snapshots/: mod.rs
src/state/: change_detection.rs  history.rs  index.rs  mod.rs  preferences.rs  project.rs  recorder.rs  satisfaction.rs  store.rs
src/steps/: completed_check.rs  executor.rs  mod.rs  resolved.rs  sensitive.rs
src/ui/: README.md  hints.rs  icons.rs  mock.rs  (+12 more)
templates/: detectors.yml  registry.yml
tests/: cache_test.rs  cli_test.rs  completions_test.rs  config_cmd_test.rs  detection_test.rs  history_test.rs  init_gaps_test.rs  last_outcomes_test.rs  lib_test.rs  list_gaps_test.rs  output_test.rs  process_group_test.rs  registry_api_test.rs  release_config.rs  remote_templates_test.rs  run_rendering_tests.rs  steps_api_test.rs  system_add.rs  system_add_tests.rs  system_cache.rs  system_cache_tests.rs  system_command_tests.rs  system_completions.rs  system_completions_tests.rs  system_config.rs  system_config_features.rs  system_config_tests.rs  system_feedback.rs  system_feedback_tests.rs  system_global_tests.rs  system_history.rs  system_history_tests.rs  system_init.rs  system_init_tests.rs  system_last.rs  system_last_tests.rs  system_lint.rs  system_lint_tests.rs  system_list.rs  system_list_tests.rs  (+11 more)
(+346 files in other folders)
