[package]
name = "bivvy"
version = "1.6.1"
edition = "2021"
rust-version = "1.93"
description = "Interactive development environment setup automation"
license-file = "LICENSE"
repository = "https://github.com/bivvy-dev/bivvy"
keywords = ["cli", "setup", "development", "automation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI framework
clap = { version = "4.5.56", features = ["derive", "env"] }

# Interactive prompts
dialoguer = "0.12.0"
console = "0.16.2"

# Progress indicators
indicatif = "0.18.3"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# YAML parsing
serde_yaml = "0.9"

# YAML with source location tracking (for lint error reporting)
marked-yaml = "0.8.0"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.18"

# File system
dirs = "6.0.0"
walkdir = "2.5.0"
glob = "0.3.3"

# Process execution
which = "8.0.0"

# HTTP client (for remote templates)
reqwest = { version = "0.13.1", default-features = false, features = ["blocking", "json", "rustls"] }

# Time handling (for state)
chrono = { version = "0.4.43", features = ["serde"] }

# Hashing (for project identification)
sha2 = "0.10"
hex = "0.4.3"

# Random number generation (for session IDs)
getrandom = "0.2"

# Regular expressions (for version extraction)
regex = "1"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Embed templates at compile time
include_dir = "0.7.4"
clap_complete = "4.5.65"

# URL handling (for feedback delivery)
open = "5"
urlencoding = "2"

[dev-dependencies]
assert_cmd = "2.1.2"
httpmock = "0.8"
predicates = "3.1.3"
tempfile = "3.24.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"
