[package]
name = "bivvy"
version = "1.10.0"
edition = "2021"
rust-version = "1.93"
description = "Interactive development environment setup automation"
license-file = "LICENSE"
repository = "https://github.com/bivvy-dev/bivvy"
keywords = ["cli", "setup", "development", "automation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI framework
clap = { version = "4.5.56", features = ["derive", "env"] }

# Interactive prompts
dialoguer = "0.12.0"
console = "0.16.2"

# Progress indicators
indicatif = "0.18.3"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
schemars = { version = "1.2", features = ["derive"] }

# YAML parsing
serde_yaml = "0.9"

# YAML with source location tracking (for lint error reporting)
marked-yaml = "0.8.0"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.18"

# File system (none — directory discovery and glob matching are in src/sys.rs)

# Process execution (PATH lookup is in src/sys.rs)

# HTTP client (for remote templates)
reqwest = { version = "0.13.1", default-features = false, features = ["blocking", "json", "rustls"] }

# Time handling (for state)
chrono = { version = "0.4.43", features = ["serde"] }

# Hashing (for project identification)
sha2 = "0.11"
hex = "0.4.3"

# Random number generation (in src/sys.rs via /dev/urandom / BCryptGenRandom)

# Regular expressions (for version extraction)
regex = "1"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Embed templates at compile time
include_dir = "0.7.4"
clap_complete = "4.5.65"

# URL handling (percent-encoding and browser opening are in src/sys.rs)

[dev-dependencies]
assert_cmd = "2.1.2"
expectrl = "0.7"
httpmock = "0.8"
insta = { version = "1.47.2", features = ["yaml", "json", "redactions"] }
predicates = "3.1.3"
tempfile = "3.24.0"
vt100 = "0.15"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = []

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"
